# Burgess

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  FUSION_PLAN.md  README.md  TUTORIAL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: adversarial-grounder.md  annotator.md  evaluator.md  extractor.md  generator.md  grounder.md
commands/: kg-build.md  kg-diverge.md  kg-eval.md  kg-experiment.md  kg-generate.md  kg-ground.md  kg-perturb.md  kg-query.md  kg-view.md
docs/: ARCHITECTURE.md  COMMANDS.md  MIGRATION.md
docs/fusion/: ATTRIBUTION.md  BASELINE.md  BLOCKERS.md  DECISIONS.md  EXPERIMENT.md  FUSION_PLAN.md  INVENTORY.md  PLAN_STATE.md
examples/: source.md
hooks/: hooks.json  precontext.py  provision.mjs  provision.ps1  provision.sh
pack/: pack.yaml
pack/domains/: _schema.md  generic.yaml
scripts/: _engine_resolve.mjs  bootstrap.py  canon_merge_driver.mjs  check_donors_clean.py  donor_pins.json  f4_probe.py  launch_server.mjs  validate_plugin.py
scripts/kg_engine/: __init__.py  advisory_geometry.py  atomicio.py  backend.py  boundary.py  canon.py  canonmerge.py  dirlock.py  envconfig.py  export.py  generate.py  graphio.py  groundaudit.py  harness.py  lightrag_arm.py  model.py  operations.py  pack.py  pathing.py  projector.py  reconciler.py  scrub.py  server.py  sources.py
scripts/kg_engine/divergence/: __init__.py  __main__.py  archive.py  config.py  diversity.py  embed.py  gap.py  importer.py  memory.py  pipeline.py  selftest.py  session.py  state.py
scripts/kg_engine/templates/: graph_html.py
skills/burgess/: SKILL.md
skills/burgess/references/: axis_inference.md  contract.md  judge_rubric.md  operators.md  pack-schema.md  tools.md
tests/: test_bootstrap.py  test_chaos.py  test_e2e_generative.py  test_export.py  test_fix_canon.py  test_fix_kg_build_source.py  test_fix_ops.py  test_fix_reconciler.py  test_fix_scrub.py  test_fix_server.py  test_fix_source_path_quotes.py  test_generate.py  test_groundaudit.py  test_harness.py  test_launchers.py  test_manifests.py  test_perturb_second_construction.py  test_projector.py  test_reexaminable_verdicts.py  test_resilience.py  test_review_fixes.py  test_review_followup.py  test_review_r10.py  test_review_r11.py  test_review_r4.py  test_review_r5.py  test_review_r6.py  test_review_r7.py  test_review_r8.py  test_review_r9.py  test_review_sweep.py  test_rfix_a10.py  test_rfix_a11.py  test_rfix_generate.py  test_rfix_server.py
tests/fusion/: test_diverge_surface.py  test_divergence_degradation.py  test_divergence_ephemerality.py  test_divergence_firewall.py  test_experiment_arm.py  test_generate_geometry.py  test_materialization.py
tests/fusion/divergence/: conftest.py  test_archive_novelty.py  test_ask_policy_schedule.py  test_config_axes.py  test_discard.py  test_diversity_fallback.py  test_diversity_monitor.py  test_embed.py  test_engine_config.py  test_gap_probe.py  test_init_reset.py  test_mechanism_novelty.py  test_memory.py  test_novelty_reference_cap.py  test_open_nicher_freeze.py  test_pipeline_robustness.py  test_prefilter_guard.py  test_project_lock.py  test_robustness.py  test_selftest_e2e.py  test_state.py  test_state_paths.py  test_state_pruning.py  test_variety_erosion.py
